[gd_scene load_steps=25 format=3 uid="uid://cnin1tm5lejtl"]

[ext_resource type="Script" uid="uid://cypah0y3f7tl7" path="res://scenes/options_menu_click.gd" id="1_8ln24"]
[ext_resource type="Theme" uid="uid://hsjha5k2p84l" path="res://button_theme.tres" id="1_ekxnf"]
[ext_resource type="Texture2D" uid="uid://060e1hr03k5a" path="res://Resources/img/piscina/fondo_piscina_flat.png" id="2_bqqt6"]
[ext_resource type="Texture2D" uid="uid://c4a43gdy2d6rs" path="res://Resources/img/piscina/fondo_piscina_foam.png" id="3_oa1go"]
[ext_resource type="Shader" uid="uid://7qe6f1bax1md" path="res://Resources/shaders/foam.tres" id="3_tbmy8"]
[ext_resource type="FontFile" uid="uid://bug5ceto8rmlk" path="res://Resources/fonts/HalenciaRound-1GyMe.ttf" id="4_8ln24"]
[ext_resource type="AudioStream" uid="uid://dcv5odqnf4j1q" path="res://Resources/audio/sfx/water-splash-02-352021.mp3" id="6_rtw2f"]
[ext_resource type="Shader" uid="uid://bfu5kn7jesc6u" path="res://Resources/shaders/main_menu.tres" id="7_tbmy8"]

[sub_resource type="Theme" id="Theme_8ln24"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_tbmy8"]

[sub_resource type="CanvasTexture" id="CanvasTexture_rtw2f"]
diffuse_texture = ExtResource("2_bqqt6")
specular_texture = SubResource("CompressedTexture2D_tbmy8")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_jk1qb"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rtw2f"]
texture = SubResource("CompressedTexture2D_jk1qb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oa1go"]
texture = ExtResource("2_bqqt6")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jk1qb"]
shader = ExtResource("3_tbmy8")
shader_parameter/Texture2DParameter = ExtResource("3_oa1go")

[sub_resource type="CanvasTexture" id="CanvasTexture_5dd4i"]
diffuse_texture = ExtResource("3_oa1go")
texture_repeat = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ln24"]
bg_color = Color(0.0588235, 0.666667, 1, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color(0, 0.364706, 1, 0.6)
shadow_size = 10
shadow_offset = Vector2(0, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtw2f"]
bg_color = Color(0.678431, 0.992157, 1, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color(0, 0.364706, 1, 0.6)
shadow_size = 10
shadow_offset = Vector2(0, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06t4h"]
bg_color = Color(0.0588235, 0.992157, 1, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color(0, 0.364706, 1, 0.6)
shadow_size = 10
shadow_offset = Vector2(0, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oa1go"]
bg_color = Color(0.0588235, 0.992157, 1, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color(0, 0.364706, 1, 0.6)
shadow_size = 10
shadow_offset = Vector2(0, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5dd4i"]
shader = ExtResource("7_tbmy8")

[sub_resource type="Animation" id="Animation_rtw2f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(649, 159)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:theme_override_colors/font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.541176)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:theme_override_colors/font_shadow_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.6)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../water:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../water:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../foam:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_8ln24"]
resource_name = "title_float"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 2.06667, 5, 8.33333, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(549, 112), Vector2(649, 159), Vector2(743, 99), Vector2(649, 159), Vector2(549, 112)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3.73333, 6.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath(".:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3.73333, 10),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:theme_override_colors/font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 5.4, 8.73333, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.541176), Color(1, 1, 1, 0), Color(1, 1, 1, 0.541176), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:theme_override_colors/font_shadow_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 3.7, 10.0333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.6), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/path = NodePath("../water:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 3.26667, 10.0667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.305, 1.305), Vector2(1, 1), Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = false
tracks/6/path = NodePath("../water:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.866667, 5.43333, 10.0667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-167, -15), Vector2(-164, -134), Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../foam:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.0333338, 0.900001, 5.46666, 10.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-167, -15), Vector2(-164, -134), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oa1go"]
_data = {
&"RESET": SubResource("Animation_rtw2f"),
&"title_float": SubResource("Animation_8ln24")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ln24")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="water" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_8ln24")
texture = SubResource("CanvasTexture_rtw2f")
expand_mode = 2
stretch_mode = 1

[node name="Panel2" type="Panel" parent="."]
visible = false
clip_children = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_rtw2f")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_oa1go")

[node name="foam" type="TextureRect" parent="."]
texture_repeat = 1
material = SubResource("ShaderMaterial_jk1qb")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4056.0
offset_bottom = 4056.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = SubResource("CanvasTexture_5dd4i")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.5
offset_top = -53.0
offset_right = 287.5
offset_bottom = 349.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
metadata/_edit_group_ = true

[node name="ButtonStart" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ekxnf")
theme_override_colors/font_hover_pressed_color = Color(1, 0.760784, 0.109804, 1)
theme_override_colors/font_hover_color = Color(1, 0.584314, 0.0627451, 1)
theme_override_colors/font_outline_color = Color(0.690196, 0.101961, 0, 1)
theme_override_colors/font_color = Color(1, 0.584314, 0.0627451, 1)
theme_override_colors/font_pressed_color = Color(1, 0.584314, 0.0627451, 1)
theme_override_constants/outline_size = 23
theme_override_font_sizes/font_size = 70
theme_override_styles/hover = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/normal = SubResource("StyleBoxFlat_06t4h")
text = "START"

[node name="StartSplashSound" type="AudioStreamPlayer2D" parent="VBoxContainer/ButtonStart"]
stream = ExtResource("6_rtw2f")

[node name="ButtonOptions" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ekxnf")
theme_override_colors/font_hover_pressed_color = Color(1, 0.584314, 0.0627451, 1)
theme_override_colors/font_outline_color = Color(0.690196, 0.101961, 0, 1)
theme_override_colors/font_color = Color(1, 0.584314, 0.0627451, 1)
theme_override_colors/font_pressed_color = Color(1, 0.584314, 0.0627451, 1)
theme_override_constants/outline_size = 23
theme_override_font_sizes/font_size = 70
theme_override_styles/hover = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/normal = SubResource("StyleBoxFlat_oa1go")
text = "Options"

[node name="OptionsSplashSound" type="AudioStreamPlayer2D" parent="VBoxContainer/ButtonOptions"]
position = Vector2(-672.5, -626)
stream = ExtResource("6_rtw2f")

[node name="ButtonExit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ekxnf")
theme_override_colors/font_hover_pressed_color = Color(1, 0.584314, 0.0627451, 1)
theme_override_colors/font_outline_color = Color(0.690196, 0.101961, 0, 1)
theme_override_colors/font_color = Color(1, 0.584314, 0.0627451, 1)
theme_override_colors/font_pressed_color = Color(1, 0.584314, 0.0627451, 1)
theme_override_constants/outline_size = 23
theme_override_font_sizes/font_size = 70
theme_override_styles/hover = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/normal = SubResource("StyleBoxFlat_06t4h")
text = "Exit
"

[node name="ExitSplashSound" type="AudioStreamPlayer2D" parent="VBoxContainer/ButtonExit"]

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
visible = false
position = Vector2(-68.5778, 562.087)
scale = Vector2(0.696001, 0.52)

[node name="title_shadow" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -311.0
offset_top = 159.0
offset_right = 224.0
offset_bottom = 494.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.541176)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 0.6)
theme_override_constants/shadow_outline_size = 60
theme_override_fonts/font = ExtResource("4_8ln24")
theme_override_font_sizes/font_size = 300
text = "Chill"

[node name="title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -330.0
offset_top = 130.0
offset_right = 205.0
offset_bottom = 465.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.760784, 0.109804, 1)
theme_override_colors/font_outline_color = Color(0.690196, 0.0980392, 0, 1)
theme_override_constants/shadow_offset_y = 25
theme_override_constants/outline_size = 50
theme_override_constants/shadow_outline_size = 50
theme_override_fonts/font = ExtResource("4_8ln24")
theme_override_font_sizes/font_size = 300
text = "Chill"

[node name="version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -49.0
offset_right = -44.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "ver. 0.2 DrMeowgonStudios 2025
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_5dd4i")
position = Vector2(960, 539)

[node name="title_shadow_anim" type="AnimationPlayer" parent="."]
root_node = NodePath("../title_shadow")
libraries = {
&"": SubResource("AnimationLibrary_oa1go")
}
autoplay = "title_float"

[connection signal="pressed" from="VBoxContainer/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
[connection signal="animation_started" from="title_shadow_anim" to="." method="_on_title_shadow_anim_animation_started"]
